# freedraw

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  release.config.cjs
.github/workflows/: release.yml
demo/: Cargo.toml  README.md  Trunk.toml  index.html  styles.css
demo/src/: app.rs  generate.rs  main.rs  svg_conversion.rs
examples/: basic.rs  svg_conversion.rs  view.html
src/: get_stroke.rs  get_stroke_outline_points.rs  get_stroke_points.rs  get_stroke_radius.rs  lib.rs  types.rs  utils.rs  vec.rs
tests/: get_stroke_points_test.rs  get_stroke_radius_test.rs  get_stroke_test.rs
