[package]
name = "freedraw"
version = "0.0.0-development"
edition = "2021"
authors = ["Jorge Soares"]
description = "A Rust port of the perfect-freehand library for creating smooth, beautiful freehand lines"
license = "MIT"
repository = "https://github.com/ducflair/freedraw"
keywords = ["drawing", "graphics", "freehand", "stroke"]
categories = ["graphics", "rendering"]
exclude = [
    "tests/**/*",
    "examples/**/*",
    "public/**/*",
    "node_modules/**/*",
]

[dependencies]

[dev-dependencies]
serde_json = "1.0"

[[example]]
name = "svg_conversion"
path = "demo/src/svg_conversion.rs" 