[package]
name = "freedraw-demo"
version = "0.1.0"
edition = "2021"

# Main binary (Yew app)
[[bin]]
name = "freedraw-demo"
path = "src/main.rs"

# SVG generation binary
[[bin]]
name = "generate-svg"
path = "src/generate.rs"

[dependencies]
freedraw = { path = ".." }
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlSelectElement",
    "Navigator",
    "Clipboard",
    "Window",
    "console",
    "Element",
    "DomRect",
    "DomRectReadOnly"
]}
serde_json = "1.0"

[workspace]
